; ModuleID = '/home/carl/AnghaBench/linux/fs/nfs/flexfilelayout/extr_flexfilelayoutdev.c_nfs4_ff_layout_select_ds_stateid.c'
source_filename = "/home/carl/AnghaBench/linux/fs/nfs/flexfilelayout/extr_flexfilelayoutdev.c_nfs4_ff_layout_select_ds_stateid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfs4_ff_layout_mirror = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nfs4_ff_layout_select_ds_stateid(%struct.nfs4_ff_layout_mirror* %0, i32* %1) #0 {
  %3 = alloca %struct.nfs4_ff_layout_mirror*, align 8
  %4 = alloca i32*, align 8
  store %struct.nfs4_ff_layout_mirror* %0, %struct.nfs4_ff_layout_mirror** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load %struct.nfs4_ff_layout_mirror*, %struct.nfs4_ff_layout_mirror** %3, align 8
  %6 = call i32 @nfs4_ff_layout_ds_version(%struct.nfs4_ff_layout_mirror* %5)
  %7 = icmp eq i32 %6, 4
  br i1 %7, label %8, label %13

8:                                                ; preds = %2
  %9 = load i32*, i32** %4, align 8
  %10 = load %struct.nfs4_ff_layout_mirror*, %struct.nfs4_ff_layout_mirror** %3, align 8
  %11 = getelementptr inbounds %struct.nfs4_ff_layout_mirror, %struct.nfs4_ff_layout_mirror* %10, i32 0, i32 0
  %12 = call i32 @nfs4_stateid_copy(i32* %9, i32* %11)
  br label %13

13:                                               ; preds = %8, %2
  ret void
}

declare dso_local i32 @nfs4_ff_layout_ds_version(%struct.nfs4_ff_layout_mirror*) #1

declare dso_local i32 @nfs4_stateid_copy(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
